archive/z_will_delete_script/minerva-kubernetes/dialog-config-template/agent-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-gateway
  namespace: dialog
spec:
  selector:
    matchLabels:
      app: deployment-agent-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: deployment-agent-gateway
    spec:
      containers:
      - name: agent-gateway
        image: IMAGE_BASEURL_PLACEHOLDER/dialog/gateway_agent:IMAGE_VERSION_PLACEHOLDER
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /root/logs
          name: logdata    
        resources: {}
      imagePullSecrets:
      - name: meinenghua
      nodeSelector: 
        node-tag: DIALOG_NODE_SELECTOR_PLACEHOLDER
      volumes:
      - name: logdata
        persistentVolumeClaim:
          claimName: dialog-logs
