archive/z_will_delete_script/minerva-kubernetes/dialog-config-template/agent-gateway/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-agent-gateway
  namespace: dialog
spec:
  selector:
    app: deployment-agent-gateway
  ports:
    - protocol: TCP
      port: 9500
      targetPort: 9500
  type: ClusterIP
