archive/z_will_delete_script/minerva-kubernetes/dialog-config-template/agent-gateway/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-agent-gateway
  namespace: dialog
spec:
  selector:
    app: deployment-agent-gateway
  ports:
    - protocol: TCP
      nodePort: 31105
      port: 9500
      targetPort: 9500
  type: NodePort
